Fix more alignment

--- a/client/src/assets/css/SectionCountry.css
+++ b/client/src/assets/css/SectionCountry.css
@@ -17,6 +17,6 @@
     columns: 6rem auto;
     flex: 1 0 auto;
 }
-.sport .medals, .sport .sports{
+.sport .medals, .sport .sports, .sport .ratio{
     flex: 1 0 auto;
 }
